--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "express": "^4.14.0",
     "mongoose": "^4.6.0",
     "morgan": "^1.7.0"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb": "^11.1.0",
+    "eslint-config-rallycoding": "^3.1.0"
   }
 }
