--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mongoose": "^4.6.0",
     "morgan": "^1.7.0",
     "passport": "^0.3.2",
-    "passport-jwt": "^2.1.0"
+    "passport-jwt": "^2.1.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint-config-airbnb": "^11.1.0",
